--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "lslcoded/mq-http-sdk",
     "type": "library",
+     "version": "1.0.4",
     "description": "Aliyun Message Queue(MQ) Http PHP SDK, PHP>=5.5.0",
-    "keywords": ["Aliyun","Alicloud", "MQ", "Message Queue", "Message", "Queue"],
+    "keywords": ["Aliyun","Alicloud", "MQ", "Message Queue", "Message", "Queue","php8"],
     "homepage": "https://github.com/aliyunmq/mq-http-php-sdk",
     "license": "MIT",
     "require": {
